got it kinda working now